# unegg-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: EGG_FORMAT_SPEC.md
src/: aes_ctr.rs  archive.rs  crypto.rs  encoding.rs  error.rs  extract.rs  lea.rs  lib.rs  main.rs  volume.rs
src/decompress/: azo.rs  bzip2.rs  deflate.rs  lzma.rs  mod.rs  store.rs
testdata/egg/: aes128.egg  aes256.egg  lea128.egg  lea256.egg  low.egg  max.egg  normal.egg  optimal.egg  solid_low.egg  solid_max.egg  split.vol1.egg  split.vol2.egg  split.vol3.egg  split.vol4.egg  split.vol5.egg  split.vol6.egg  split.vol7.egg  split.vol8.egg  store.egg  zip20.egg
testdata/source/: euckr_content.txt  hello.txt  large.txt  뷁테스트.txt  한글파일.txt
testdata/source/subdir/: inner.txt
tests/: extract.rs  synthetic.rs
